--- a/BookStore/Views/Home/Create.cshtml
+++ b/BookStore/Views/Home/Create.cshtml
@@ -1,28 +1,58 @@
 ﻿@model BookStore.Models.Book
 
 @{
+    ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>New book</h2>
+<h2>Add new book</h2>
 
-@using (Html.BeginForm())
+
+@using (Html.BeginForm()) 
 {
-    @Html.LabelFor(model => model.Name, "Name of the book")
-    <br />
-    @Html.EditorFor(model => model.Name)
-    <br />
-    <br />
-    @Html.LabelFor(model => model.Author, "Author")
-    <br />
-    @Html.EditorFor(model => model.Author)
-    <br />
-    <br />
-    @Html.LabelFor(model => model.Price, "Price")
-    <br />
-    @Html.EditorFor(model => model.Price)
-    <br />
-    <br />
-    <input type="submit" value="Add" />
-   
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>Book</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 editor-field">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Author, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 editor-field">
+                @Html.EditorFor(model => model.Author, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10 editor-field">
+                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <br />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <br />
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
+<br />
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
