--- a/BookStore/Views/Home/EditBook.cshtml
+++ b/BookStore/Views/Home/EditBook.cshtml
@@ -1,29 +1,59 @@
-﻿@{
-    ViewBag.Title = "Edit book";
+﻿@model BookStore.Models.Book
+
+@{
+    ViewBag.Title = "EditBook";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model BookStore.Models.Book
-<h2>Book № @Model.Id</h2>
-@using (Html.BeginForm("EditBook", "Home", FormMethod.Post))
-{
-    <fieldset>
-        @Html.HiddenFor(m => m.Id)
-        <p>
-            @Html.LabelFor(m => m.Name, "Name of the book")
-            <br />
-            @Html.EditorFor(m => m.Name)
-        </p>
-        <p>
-            @Html.LabelFor(m => m.Author, "Author")
-            <br />
-            @Html.EditorFor(m => m.Author)
 
-        </p>
-        <p>
-            @Html.LabelFor(m => m.Price, "Price")
-            <br />
-            @Html.EditorFor(m => m.Price)
-        </p>
-        <p><input type="submit" value="Submit" /></p>
-    </fieldset>
+<h2>EditBook</h2>
+
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>Book</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Author, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Author, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
