--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+
 </head>
- 
+
 <body>
     <nav>
         <ul class="menu">
@@ -15,7 +16,8 @@
     @RenderBody()
     @if (IsSectionDefined("Scripts"))
     {
-        @RenderSection("Scripts")
-    }
+@RenderSection("Scripts")}
 </body>
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 </html>
