--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -19,35 +19,59 @@
                 <p> @Html.DisplayNameFor(model => model.First().Name)</p>
             </th>
             <th>
-               <p> @Html.DisplayNameFor(model => model.First().Author)</p>         
+                <p> @Html.DisplayNameFor(model => model.First().Author)</p>
             </th>
             <th>
-               <p> @Html.DisplayNameFor(model => model.First().Price)</p>           
+                <p> @Html.DisplayNameFor(model => model.First().Price)</p>
             </th>
             <th></th>
         </tr>
         @foreach (var b in Model)
         {
-            <tr>
-                <td>
-                    <p>@Html.DisplayFor(modelItem => b.Name)</p>
-                </td>
-                <td>
-                    <p>@Html.DisplayFor(modelItem => b.Author)</p>
-                </td>
-                <td>
-                    <p>@Html.DisplayFor(modelItem => b.Price)</p>
-                </td>
+<tr>
+    <td>
+        <p>@Html.DisplayFor(modelItem => b.Name)</p>
+    </td>
+    <td>
+        <p>@Html.DisplayFor(modelItem => b.Author)</p>
+    </td>
+    <td>
+        <p>@Html.DisplayFor(modelItem => b.Price)</p>
+    </td>
 
 
-                <td> @Html.ActionLink("Buy", "Buy", new { id = b.Id }) |</td>
-                <td> @Html.ActionLink("Edit", "EditBook", new { id = b.Id }) |</td>
-                <td> @Html.ActionLink("Details", "Details", new { id = b.Id }) |</td>
-                <td> @Html.ActionLink("Delete", "Delete", new { id = b.Id }) </td>
-            </tr>
-
-        }
+    <td> @Html.ActionLink("Buy", "Buy", new { id = b.Id }) |</td>
+    <td> @Html.ActionLink("Edit", "EditBook", new { id = b.Id }) |</td>
+    <td> @Html.ActionLink("Details", "Details", new { id = b.Id }) |</td>
+    <td> @Html.ActionLink("Delete", "Delete", new { id = b.Id }) </td>
+</tr>}
     </table>
+
+    <div>
+        @using (Ajax.BeginForm("BookSearch", new AjaxOptions { UpdateTargetId = "results",
+            LoadingElementId = "loading", LoadingElementDuration = 1000,
+           // Confirm = "Выполнить AJAX-запрос?",
+            InsertionMode = InsertionMode.InsertBefore}))
+        {
+            <input type="text" name="name" />
+            <input type="submit" value="Поиск" />
+        }
+        <div id="loading" style="display:none; color:Red; font-weight:bold;">
+            <p>Идет загрузка...</p>
+        </div>
+
+        <div id="results"></div>
+    </div>
+
+    @foreach(string s in ViewBag.Authors)
+    {
+    <div style="margin-right:8px;float:left;">
+        @Ajax.ActionLink(s, "BookSearch", new {name=s},new AjaxOptions{ UpdateTargetId="results", HttpMethod = "POST" })
+    </div>
+    }
+
+
+
     <br />
     Page № @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount;
 
